# strategoxt-manual

./: AUTHORS  ChangeLog  HOWTO  Makefile.am  Makefile.docbook  NEWS  README  bootstrap  configure.ac  docbook.m4  nix-release.m4  prepare-manual.sh  prepare-manual.sh.in  svg.m4
doc/: Makefile.am  advanced-stratego.xml  book.xml  gettingstarted.xml  gpp.xml  java.xml  language.xml  manual-authors.xml  manual-intro.xml  pack-sdf.xml  sdf-language.xml  stratego-language.xml  stratego-library.xml  xdoc.xml  xtc.xml
doc/advanced-stratego/: advanced-stratego.xml
doc/asfix/: asfix.xml  asfix2me.example
doc/aterms/: aterms.xml
doc/demos/: compilation.xml  data-flow.xml  demos.xml  eblocks.xml  intro-overview.xml  intro-strategoxt.xml  intro-transformations.xml  introduction.xml  run.xml  sample-rules.str  sdf.xml  simplify.xml  software.xml
doc/developers/: latestsources.xml  stratego-dev.xml
doc/examples/: bibtex-tools.xml  book.xml  compilation.xml  data-flow.xml  eblocks.xml  intro-overview.xml  intro-strategoxt.xml  intro-transformations.xml  introduction.xml  renaming.xml  run.xml  sdf.xml  simplify.xml  software.xml  tc.xml  tiger.xml  typestate.xml
doc/format/: Exp.rtg  format.xml  format_failed  format_succeed  format_xhtml  term1  term2  term3
doc/gettingstarted/: architecture.xml  gettingstarted.xml
doc/gpp/: box.xml  gpp.xml  pp-table.xml  selectors.pp
doc/installation/: installation.xml
doc/java/: Stratego-Java-C.sdf  Try.c  Try.java  authors.xml  book.xml  demo-java2c.xml  dryad.xml  getting-started.xml  java-front.xml  java.xml  java2c-1.str  java2c-2.str  java2c.str
doc/parse-unit/: Exp.sdf  expression.testsuite  parse-unit.xml  run
doc/reference/: authors.xml  book.xml
doc/reference-manual/: book.xml
doc/reference-manual/aterms/: aterms.xml
doc/reference-manual/development/: latestsources.xml  part.xml  stratego-dev.xml
doc/reference-manual/sdf/: part.xml
doc/reference-manual/stratego/: dynamic-rules.xml  failure.xml  rules.xml
doc/reference-manual/toolref/: ast2abox.xml  aterm2xml.xml  autoxt-configure.ac  format-check.xml  parse-pp-table.xml  parse-stratego.xml  pp-rtg.xml  rtg2typematch.xml  sdf2parenthesize.xml  unpack-sdf.xml
doc/reference-manual/xdoc/: xdoc.xml
doc/reference/development/: latestsources.xml  package.xml  part.xml  stratego-dev.xml
doc/reference/sdf/: part.xml
doc/reference/stratego/: buildapply.xml  congruence.xml  introduction.xml  part.xml  rule-def.xml  terms.xml
doc/representation/: chapter.xml
doc/sdf/: part.xml
doc/sdf-language/: sdf-language.xml
doc/stratego/: intro.xml  part.xml
doc/stratego-language/: applymatch.xml  build-match.xml  build.xml  buildapply.xml  combinators.xml  compiler-interpreter.xml  concrete-syntax.xml  congruence.xml  currentterm.xml  definitions.xml  dynamic-rules.xml  failure.xml  ifthen.xml  ifthenelse.xml  in-control.xml  introduction.xml  leftchoice.xml  match.xml  negation.xml  rec.xml  reference.xml  rules.xml  seq.xml  stratego-language.xml  strategy-def.xml  syntax.xml  terms.xml  traversal.xml  type-unifying.xml
doc/stratego-library/: io.xml  lists.xml  stratego-library.xml
doc/stratego-reference/: applymatch.xml  build.xml  identity.xml  ifthenelse.xml  reference.xml  terms.xml
doc/sunit/: sunit.xml
doc/toolref/: abox2text.xml  asfix-yield.xml  ast2abox.xml  ast2text.xml  aterm2xml-examples.xml  aterm2xml.xml  authors.xml  autoxt.xml  binary-option.xml  common-debugging-options.xml  common-io-options.xml  format-check.xml  gen-renamed-sdf-module.xml  help-option.xml  implode-asfix.xml  lgpl-copyright.xml  pack-sdf.xml  parse-box.xml  parse-c.xml  parse-cs.xml  parse-pp-table.xml  parse-rtg.xml  parse-sdf-definition.xml  parse-sdf-module.xml  parse-stratego.xml  parse-unit.xml  parse-xml-doc.xml  parse-xml-info.xml  pp-aterm.xml  pp-box.xml  pp-c.xml  pp-pp-table.xml  pp-rtg.xml  pp-sdf.xml  pp-stratego.xml  pp-xml-doc.xml  pp-xml-info.xml  ppgen.xml  pptable-diff.xml  pretty-stratego.xml  (+16 more)
doc/tutorial/: authors.xml  book.xml  compilation.xml  data-flow.xml  eblocks.xml  intro-overview.xml  intro-strategoxt.xml  intro-transformations.xml  introduction.xml  renaming.xml  run.xml  sdf.xml  simplify.xml  software.xml  workinprogress.xml
doc/xdoc/: xdoc.xml
doc/xtc/: xtc.xml
draw/: boxes.odg  more-boxes.odg
html/: Makefile.am  index.html  style.css
html/chunk-book/: Makefile.am
html/chunk-chapter/: Makefile.am
html/chunk-part/: Makefile.am
html/one-page/: Makefile.am
man/: Makefile.am
pdf/: Makefile.am  libfo-compat-more.xsl
src/: Makefile.am
src/sdf/: Expressions.sdf
src/til/: README  maak  maak-clean
src/til/opt/: maak  til-copyprop-rev.str  til-copyprop.str  til-cse.str  til-dce.str  til-forward-prop.str  til-forward-subst.str  til-opt-lib.str  til-propconst.str
src/til/pp/: TIL-pretty.pp  maak  maak-clean
src/til/renaming/: maak  til-rename-vars.str
src/til/run/: maak  til-eval-exp.str  til-eval-stats.str  til-eval-var.str  til-run.str
src/til/sig/: maak  maak-clean
src/til/sim/: maak  maak-clean  til-desugar.str  til-eval.str  til-simplify.str
src/til/syn/: Expressions.sdf  TIL-calls.sdf  TIL-expressions.sdf  TIL-statements.sdf  TIL.sdf  maak  maak-clean
src/til/tc/: maak  til-typecheck-exp.str  til-typecheck-stats.str  til-typecheck-var.str  til-typecheck.str
src/til/til-eblock/: maak  til-eblock-desugar.str
src/til/typestate/: maak
src/til/xmpl/: copyprop-test2.til  cse-test2.til  dce-test2.til  eblock-desugar-test2  eblock-desugar-test2.til  fc-test1  maak  maak-clean  parse-test  propconst-test1.til  propconst-test2.til  run-test1  simplify-test  test1-wrong.atil  test1.til  typecheck-test1
svg/: Makefile.am
svg/tutorial/introduction/: pipe.odg
svg/tutorial/xt/architecture/: contracts.odg
svg/tutorial/xt/sdf/: PlusTimes.dot
svg/tutorial/xt/terms/: sharing-graph.dot  sharing-tree.dot
todo/: java2c.txt
todo/program-representation-xmpl/: test1-ntt.dot  test2-ntt.dot  test6-unparse.dot  test6.cub  test7.cub
xslt/: docbook-ng-fix.xsl  macros.xsl
xslt/chunk/: flexchunk.xsl
(+225 files in other folders)
